--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,11 @@ jar {
 
 dependencies {
     // General Denpendencies
-    testCompile 'junit:junit:4.11'
+    testCompile group: 'org.hamcrest',                name: 'hamcrest-all',          version: '1.3'
+    testCompile group: 'junit',                       name: 'junit',                 version: '4.11'
+    testCompile group: 'com.vmlens',                  name: 'concurrent-junit',      version: '1.0.0'
+    
     compile 'junit-addons:junit-addons:1.4'
-    testCompile 'com.vmlens:concurrent-junit:1.0.0'
     compile 'org.testng:testng:6.5.2'
     compile 'org.easymock:easymock:3.4'
 
@@ -62,11 +64,11 @@ dependencies {
     compile group: 'org.apache.commons',              name: 'commons-dbcp2',         version: '2.1.1'
 
     compile group: 'commons-beanutils',               name: 'commons-beanutils',     version: '1.8.3'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    compile group: 'org.apache.commons',              name: 'commons-lang3',         version: '3.7'
     
     // Binding between the slf4j and the log4j
-    compile group: 'org.slf4j',               name: 'slf4j-log4j12',         version: '1.7.25'
-    compile group: 'log4j',                   name: 'log4j',                 version: '1.2.17'
+    compile group: 'org.slf4j',                       name: 'slf4j-log4j12',         version: '1.7.25'
+    compile group: 'log4j',                           name: 'log4j',                 version: '1.2.17'
 
     compile fileTree(dir: 'lib', include: ['*.jar'])
 }
