--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     testCompile group: 'org.hamcrest',                name: 'hamcrest-all',          version: '1.3'
     testCompile group: 'junit',                       name: 'junit',                 version: '4.11'
     testCompile group: 'com.vmlens',                  name: 'concurrent-junit',      version: '1.0.0'
+    testCompile group: 'org.mockito',                 name: 'mockito-core',          version: '2.21.0'
+    
     
     compile 'junit-addons:junit-addons:1.4'
     compile 'org.testng:testng:6.5.2'
