--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ services:
   - mysql
 
 before_install:
-  - mysql -u root --password="" < config/travis.sql
+  - echo "USE mysql;\nUPDATE user SET password=PASSWORD('6ytow2-;S3lA') WHERE user='root';\n"
+  - mysql -u root --password="6ytow2-;S3lA" < config/travis.sql
