Add comment to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ services:
   - mysql
 
 before_install:
-  - mysqladmin --user=root password "6ytow2-;S3lA"
+  - mysqladmin --user=root password "6ytow2-;S3lA"                #set the password for root user
   - mysql -u root --password="6ytow2-;S3lA" < config/travis.sql
